# picostream

./: .gitignore  99-picostream.rules  CLAUDE.md  Cargo.toml  LICENSE  README.md  pico-bitstream-spec.md  test-firmware.sh  test-timing.sh  test.sh
.cargo/: config.toml
.github/workflows/: build-firmware.yml
client/: Cargo.toml
client/src/: main.rs
firmware/: Cargo.toml  build.rs
firmware/.cargo/: config.toml
firmware/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs
