[package]
name = "picostream"
description = "Stream digital bitstreams to RP2040/RP235x GPIO over USB"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
picostream-shared = { path = "../shared" }

nusb = "0.2"
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
libc = "0.2"
