[package]
name = "picostream-firmware"
description = "RP2040/RP235x firmware for picostream USB bitstream device"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
rp2040 = ["embassy-rp/rp2040"]
rp235x = ["embassy-rp/rp235xa", "embassy-rp/binary-info"]

[dependencies]
picostream-shared = { path = "../shared" }

embassy-executor = { version = "0.9", features = ["arch-cortex-m", "executor-thread"] }
embassy-rp = { version = "0.9", features = ["time-driver", "critical-section-impl"] }
embassy-usb = "0.5"
embassy-sync = "0.7"
embassy-time = "0.5"
embassy-futures = "0.1"

cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-rt = "0.7"
critical-section = "1.1"

defmt = "1"
defmt-rtt = "1"
panic-probe = { version = "1", features = ["print-defmt"] }

static_cell = "2"
portable-atomic = { version = "1", features = ["critical-section"] }
fixed = "1.23"
